Actions
Bug #14055
closedlibprtdiag: smatch errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
smatch errors on SPARC build:
/code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/display_sun4v.c:1795 sun4v_print_fru_status_callback() error: unchecked function return 'strcpy' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/cpu.c:138 display_cpu_devices() warn: inconsistent indenting /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/memory.c:200 get_us3_mem_regs() error: unchecked function return 'strcpy' /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/memory.c:200 get_us3_mem_regs() error: strcpy() '"no_status"' too large for 'bank_status' (10 vs 9) /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/io.c:187 insert_io_card() warn: if statement not indented /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/io.c:189 insert_io_card() warn: if statement not indented /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/io.c:603 populate_slot_name_arr() warn: inconsistent indenting /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/io.c:608 populate_slot_name_arr() warn: inconsistent indenting /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/io.c:631 populate_slot_name_arr() warn: curly braces intended? /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/io.c:638 populate_slot_name_arr() warn: inconsistent indenting /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/io.c:823 display_psycho_pci() warn: inconsistent indenting /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/io.c:865 display_psycho_pci() warn: inconsistent indenting /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/io.c:879 display_psycho_pci() warn: inconsistent indenting /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/io.c:959 display_psycho_pci() warn: inconsistent indenting /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../common/io.c:986 get_slot_number_str() error: unchecked function return 'sprintf'
Testing done: build/install/boot, prtdiag seems to behave ok.
Updated by Electric Monk 7 months ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 6fb59094dc99ac1cd1612ee8378be81717e7dfc9
commit 6fb59094dc99ac1cd1612ee8378be81717e7dfc9 Author: Toomas Soome <tsoome@me.com> Date: 2021-10-19T06:01:09.000Z 14055 libprtdiag: smatch errors Reviewed by: Klaus Ziegler <klausz@haus-gisela.de> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions