14055 libprtdiag: smatch errors Reviewed by: Klaus Ziegler <klausz@haus-gisela.de> Approved by: Robert Mustacchi <rm@fingolfin.org>