usr/src/lib/libprtdiag/common/libdevinfo_sun4u.c
@@ -24,8 +24,6 @@
  * Use is subject to license terms.
  */
 
-#pragma ident	"%Z%%M%	%I%	%E% SMI"
-
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
@@ -50,10 +48,10 @@
  */
 
 int	do_devinfo(int syserrlog, char *pgname, int log_flag,
-		    int prt_flag);
-static void 	dump_di_node(Prom_node *pnode, di_node_t di_node);
+    int prt_flag);
+static void dump_di_node(Prom_node *pnode, di_node_t di_node);
 static Prom_node *walk_di_tree(Sys_tree *tree, Prom_node *root,
-		    di_node_t di_node);
+    di_node_t di_node);
 static int match_compatible_name(char *, int, char *);
 
 /*
@@ -77,8 +75,10 @@ walk_di_tree(Sys_tree *tree, Prom_node *root, di_node_t di_node)
 	char		*name, *type, *model, *compatible_array;
 	int		board_node = 0;
 	int		*int_val;
-	int		portid;
 	int		is_schizo = 0, n_names;
+#ifdef DEBUG
+	int		portid;
+#endif
 
 	/* allocate a node for this level */
 	if ((pnode = (Prom_node *) malloc(sizeof (struct prom_node))) ==
@@ -115,6 +115,7 @@ walk_di_tree(Sys_tree *tree, Prom_node *root, di_node_t di_node)
 			is_schizo = 1;
 	}
 
+#ifdef DEBUG
 	if (int_val = (int *)get_prop_val(find_prop(pnode, "portid")))
 		portid = *int_val;
 	else if ((strcmp(type, "cpu") == 0) &&
@@ -123,7 +124,6 @@ walk_di_tree(Sys_tree *tree, Prom_node *root, di_node_t di_node)
 	else
 		portid = -1;
 
-#ifdef DEBUG
 	if (name != NULL)
 		printf("name=%s\n", name);
 	if (type != NULL)
@@ -185,7 +185,7 @@ walk_di_tree(Sys_tree *tree, Prom_node *root, di_node_t di_node)
 	 * end of the sibling chain as opposed to the middle or front.
 	 */
 	if (board_node)
-	    return (NULL);
+		return (NULL);
 
 	return (pnode);
 }
@@ -199,7 +199,7 @@ dump_di_node(Prom_node *pnode, di_node_t di_node)
 {
 	Prop *prop = NULL;	/* tail of properties list */
 
-	Prop 		*temp;	/* newly allocated property */
+	Prop		*temp;	/* newly allocated property */
 	di_prop_t	di_prop;
 	di_prom_prop_t	p_prop;
 	int		retval = 0;
@@ -229,38 +229,32 @@ dump_di_node(Prom_node *pnode, di_node_t di_node)
 		D_PRINTF("DEVINFO Properties  %s: ", di_name);
 
 		switch (di_ptype) {
-			int	*int_val;
-			char	*char_val;
 		case DI_PROP_TYPE_INT:
 			retval = di_prop_lookup_ints(DDI_DEV_T_ANY,
-				di_node, di_name, (int **)&di_data);
+			    di_node, di_name, (int **)&di_data);
 			if (retval > 0) {
-				int_val = (int *)di_data;
-				D_PRINTF("0x%x\n", *int_val);
+				D_PRINTF("0x%x\n", *(int *)di_data);
 			}
 			break;
 		case DI_PROP_TYPE_STRING:
 			retval = di_prop_lookup_strings(DDI_DEV_T_ANY,
-				di_node, di_name, (char **)&di_data);
+			    di_node, di_name, (char **)&di_data);
 			if (retval > 0) {
-				char_val = (char *)di_data;
-				D_PRINTF("%s\n", char_val);
+				D_PRINTF("%s\n", (char *)di_data);
 			}
 			break;
 		case DI_PROP_TYPE_BYTE:
 			retval = di_prop_lookup_bytes(DDI_DEV_T_ANY,
-				di_node, di_name, (uchar_t **)&di_data);
+			    di_node, di_name, (uchar_t **)&di_data);
 			if (retval > 0) {
-				char_val = (char *)di_data;
-				D_PRINTF("%s\n", char_val);
+				D_PRINTF("%s\n", (char *)di_data);
 			}
 			break;
 		case DI_PROP_TYPE_UNKNOWN:
 			retval = di_prop_lookup_bytes(DDI_DEV_T_ANY,
-				di_node, di_name, (uchar_t **)&di_data);
+			    di_node, di_name, (uchar_t **)&di_data);
 			if (retval > 0) {
-				char_val = (char *)di_data;
-				D_PRINTF("%s\n", char_val);
+				D_PRINTF("%s\n", (char *)di_data);
 			}
 			break;
 		case DI_PROP_TYPE_BOOLEAN:
@@ -311,16 +305,17 @@ dump_di_node(Prom_node *pnode, di_node_t di_node)
 
 		temp->value.val_ptr = (void *)di_data;
 		if ((di_data != NULL) && (*((char *)di_data) == '\0')) {
-		    for (i = 0; i < OPROM_NODE_SIZE; i++)
-			temp->value.opp.oprom_node[i] = *((int *)di_data+i);
+			for (i = 0; i < OPROM_NODE_SIZE; i++)
+				temp->value.opp.oprom_node[i] =
+				    *((int *)di_data+i);
 
-		    temp->value.opp.holds_array = 0;
-		} else {
-		    temp->value.opp.oprom_array = temp->value.val_ptr;
-		    if (di_ptype == DI_PROP_TYPE_BOOLEAN)
 			temp->value.opp.holds_array = 0;
-		    else
-			temp->value.opp.holds_array = 1;
+		} else {
+			temp->value.opp.oprom_array = temp->value.val_ptr;
+			if (di_ptype == DI_PROP_TYPE_BOOLEAN)
+				temp->value.opp.holds_array = 0;
+			else
+				temp->value.opp.holds_array = 1;
 		}
 
 		temp->size = retval;
@@ -380,14 +375,14 @@ dump_di_node(Prom_node *pnode, di_node_t di_node)
 
 		temp->value.val_ptr = (void *)p_data;
 		if ((p_data != NULL) && (*p_data == '\0')) {
-		    for (i = 0; i < OPROM_NODE_SIZE; i++)
-			/* LINTED */
-			temp->value.opp.oprom_node[i] = *((int *)p_data+i);
+			for (i = 0; i < OPROM_NODE_SIZE; i++)
+				temp->value.opp.oprom_node[i] =
+				    *((int *)p_data+i);
 
-		    temp->value.opp.holds_array = 0;
+			temp->value.opp.holds_array = 0;
 		} else {
-		    temp->value.opp.oprom_array = temp->value.val_ptr;
-		    temp->value.opp.holds_array = 1;
+			temp->value.opp.oprom_array = temp->value.val_ptr;
+			temp->value.opp.holds_array = 1;
 		}
 
 		temp->size = retval;
@@ -465,7 +460,7 @@ do_devinfo(int syserrlog, char *pgname, int log_flag, int prt_flag)
 static int
 match_compatible_name(char *compatible_array, int n_names, char *name)
 {
-	int 	i, ret = 0;
+	int	i, ret = 0;
 
 	/* parse the compatible list */
 	for (i = 0; i < n_names; i++) {
